# BMUq

./: .gitignore  OLLAMA_USAGE.md  README.md  pyproject.toml  pytest.ini  quick_llama31_gsm8k.py  setup.py
bmuq/: __init__.py  gsm8k-generated-outputs-4.json
bmuq/benchmarks/: __init__.py  benchmark.py  datasets.py  evaluator.py  metrics.py  utils.py
bmuq/config/: __init__.py  presets.py  settings.py
bmuq/core/: __init__.py  data_structures.py  interfaces.py
bmuq/models/: __init__.py  base.py  huggingface_llm.py  mock_llm.py  ollama_llm.py  openai_llm.py  vllm_llm.py
bmuq/prm/: README.md  __init__.py  download_prm800k.sh  evaluate.py  evaluate_processbench.py  example_usage.py  featurizer.py  inference.py  train.py
bmuq/search/: __init__.py  base_search.py  beam_search.py  best_of_n.py  tree_search.py
bmuq/tests/: __init__.py  test_benchmark_configurations.py  test_config.py  test_core.py  test_huggingface.py  test_models.py
bmuq/uncertainty/: __init__.py  adapters.py  base_methods.py  coherence_uq.py  prmbased_uq.py  selfcheck.py  token_probability_uq.py  uq_methods.py  weighted_aggregation.py
bmuq/utils/: coherence_tools.py
examples/: basic_usage.py  custom_config.py  dataset_examples.py  huggingface_examples.py  ollama_examples.py  token_probability_uq_example.py  weighted_aggregation_example.py
scripts/: run_experiments.py
