[project]
name = "bmuq"
version = "0.1.0"
description = "Bayesian Methods for Uncertainty Quantification in Large Language Models"
authors = [
    {name = "Iacopo", email = "iacopo.ghinassi@ntu.edu.sg"},
    {name = "BMUq Contributors"},
]
dependencies = [
    "setuptools>=80.9.0",
    "dataclasses-json>=0.5.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "pandas>=1.3.0",
    "pydantic>=1.8.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
    "sentence-transformers>=5.1.0",
    "datasets>=4.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
]


[project.optional-dependencies]
dev = [
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
    "jupyter>=1.0.0",
    "mypy>=0.800",
    "pytest-cov>=2.10",
    "pytest>=6.0",
    "pyyaml>=5.4",
    "requests>=2.25.0",
]
anthropic = [
    "anthropic>=0.3.0",
]
huggingface = [
    "accelerate>=0.20.0",
    "bitsandbytes>=0.39.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
]
huggingface-cpu = [
    "accelerate>=0.20.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
]
all = [
    "accelerate>=0.20.0",
    "anthropic>=0.3.0",
    "bitsandbytes>=0.39.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

